SERVER-96234 Implement missing save/restore calls in DistinctScan (#28986)

GitOrigin-RevId: 7aa950ae51e671f89549dfa3ba63e86de0e19291