jstests/sharding/query/distinct_shard_filtering.js
@@ -5,8 +5,6 @@
  *   featureFlagShardFilteringDistinctScan,
  *   do_not_wrap_aggregations_in_facets,
  *   not_allowed_with_signed_security_token,
- *   # TODO SERVER-95934: Remove tsan_incompatible.
- *   tsan_incompatible,
  * ]
  */
 
